fixed stretched project image

--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ header p {
 .work-1 img {
     width: 500px;
     height: 400px;
+    object-fit: cover;
     padding: 1em;
     border-radius: 3em;
 }
